Dark Mode fixed, main modal and its logical finished

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,5 +1,9 @@
 :root {
 	--background-header: #efd81a;
+	--ligth-white: #f5f5f5;
+	--white: #fff;
+	--black: #000;
+	--granate: #34252f;
 }
 
 /* Light Mode */
@@ -16,10 +20,14 @@
 	color: #fff;
 }
 
-.bi-brightness-high-fill {
+/* .bi-brightness-high-fill {
 	font-size: 2rem;
 	cursor: pointer;
-}
+} */
+
+/* .bi-brightness-high-fill:hover {
+	color: var(--ligth-white);
+} */
 
 body {
 	margin: 0;
@@ -32,7 +40,7 @@ body {
 	display: grid;
 	text-align: center;
 	grid-template-columns: 1fr;
-	grid-template-rows: 0.4fr 2fr 0.4fr;
+	grid-template-rows: 0.4fr 2fr 0.2fr;
 	grid-auto-columns: 1fr;
 	gap: 0px 0px;
 	grid-auto-flow: row;
@@ -70,6 +78,11 @@ body {
 	justify-content: center;
 	align-items: center;
 }
+
+/* #dark-mode-button {
+	background-color: transparent;
+	border: none;
+} */
 
 .language-mode {
 	grid-area: language-mode;
@@ -114,7 +127,7 @@ h5 {
 .game-area {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
-	grid-template-rows: 0.3fr 0.3fr 2fr 0.2fr 0.2fr 0.2fr;
+	grid-template-rows: 0.3fr 0.3fr 2fr 0.2fr 0.3fr 0.2fr;
 	gap: 0px 0px;
 	grid-auto-flow: row;
 	grid-template-areas:
@@ -128,8 +141,9 @@ h5 {
 }
 
 .player-name {
+	font-size: 1.3rem;
+	font-style: italic;
 	grid-area: player-name;
-	background-color: rgb(230, 243, 115);
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -137,10 +151,15 @@ h5 {
 
 .player-points {
 	grid-area: player-points;
-	background-color: rgb(165, 234, 86);
 	display: flex;
 	justify-content: center;
 	align-items: center;
+}
+
+.acumulatedPoints {
+	font-size: 2rem;
+	font-style: italic;
+	color: #34252f;
 }
 
 .counter {
@@ -195,6 +214,10 @@ h5 {
 	align-items: center;
 }
 
+#light .card-play {
+	background-color: var(--white);
+}
+
 #currentCard {
 	font-family: 'Fira Code', monospace;
 	font-size: 1.5rem;
@@ -202,14 +225,20 @@ h5 {
 
 .messages {
 	grid-area: messages;
-	background-color: rgb(220, 187, 230);
+	background-color: var(--black);
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
 
+.textMessage {
+	font-size: 1.1rem;
+	color: white;
+}
+
 .buttons {
 	display: grid;
+	margin: 1rem 0;
 	grid-template-columns: 1fr 1fr 1fr;
 	grid-template-rows: 1fr;
 	gap: 0px 0px;
@@ -254,6 +283,7 @@ h5 {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	justify-self: center;
 }
 
 .firstButton,
@@ -267,8 +297,11 @@ h5 {
 }
 
 .startButton {
+	background-color: #92dce5;
+	color: #004e64;
+	font-size: 1.2rem;
 	cursor: pointer;
-	width: 90%;
+	width: 30vw;
 	height: 100%;
 	border: 0;
 	border-radius: 10px;
@@ -284,8 +317,65 @@ h5 {
 	justify-content: center;
 	align-items: center;
 	height: 100vh;
+	background-color: antiquewhite;
 }
 
-.nameUser {
+.insideUser {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	background-color: #fff;
+	width: 50vw;
+	height: 25vh;
+	border-radius: 15px;
+	box-shadow: 2.8px 2.8px 2.2px rgba(0, 0, 0, 0.02), 6.7px 6.7px 5.3px rgba(0, 0, 0, 0.028),
+		12.5px 12.5px 10px rgba(0, 0, 0, 0.035), 22.3px 22.3px 17.9px rgba(0, 0, 0, 0.042),
+		41.8px 41.8px 33.4px rgba(0, 0, 0, 0.05), 100px 100px 80px rgba(0, 0, 0, 0.07);
+}
+
+.formControls {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+#nameUser {
 	margin: 1rem;
+	width: 30vh;
+	padding: 1rem;
+	border-radius: 10px;
+	border: 0;
+	background-color: rgb(213, 208, 208);
+}
+
+#nameUser:focus {
+	outline: none;
+	background-color: rgb(215, 212, 212);
+}
+
+#startButtonMain {
+	margin: 1rem;
+	width: 10vh;
+	padding: 0.5rem;
+	border-radius: 10px;
+	font-size: 1rem;
+	border: 0;
+	background-color: #004e64;
+	color: white;
+}
+
+#welcomeMessage {
+	color: black;
+}
+
+.mode-container {
+	position: absolute;
+	top: 7vh;
+	right: 3vw;
+}
+
+label {
+	padding: 1rem;
 }
